Fix spacing in headlines list on section page

--- a/public/styles.css
+++ b/public/styles.css
@@ -194,7 +194,7 @@ nav a:not(:last-child)::after {
   display: grid;
   grid-template-columns: 2fr 1fr;
   gap: .5rem;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 
 /* Featured Article with Image Overlay */
@@ -752,7 +752,7 @@ nav a:not(:last-child)::after {
 .section-articles-grid {
   list-style: disc;
   padding-left: 1.25rem;
-  margin: .5rem 0;
+  margin: 0rem 0;
   column-count: 3;
   column-gap: 2rem;
 }
